--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Ensure directory exists  
-        run: mkdir -p ./GitHubActions.Android  
+      # - name: Ensure directory exists  
+      #   run: mkdir -p ./GitHubActions.Android  
 
       - name: Set default Xamarin SDK versions
         #   # https://github.com/actions/runner-images/blob/main/images/macos/macos-12-Readme.md#xcode
