--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,13 +49,13 @@ jobs:
       #     /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString ${{ secrets.APP_VERSION }}" ./GitHubActions.iOS/Info.plist
       #     /usr/libexec/PlistBuddy -c "Set :CFBundleVersion ${{ github.run_number }}" ./GitHubActions.iOS/Info.plist
 
-      - name: Set Android version
-        uses: damienaicheh/update-android-version-manifest-action@v1.0.0
-        with:
-          android-manifest-path: ./GitHubActions.Android/Properties/AndroidManifest.xml
-          version-name: ${{ secrets.APP_VERSION }}
-          version-code: ${{ github.run_number }}
-          print-file: true
+      # - name: Set Android version
+      #   uses: damienaicheh/update-android-version-manifest-action@v1.0.0
+      #   with:
+      #     android-manifest-path: ./GitHubActions.Android/Properties/AndroidManifest.xml
+      #     version-name: ${{ secrets.APP_VERSION }}
+      #     version-code: ${{ github.run_number }}
+      #     print-file: true
 
       - name: Restore NuGet packages
         run: nuget restore
